# xash3d-custom

./: Application.mk  CMakeLists.txt  README.md
.github/workflows/: android.yml
android/: AndroidManifest.xml  GRADLE_WRAPPER_NOTE.txt  README.md  build.xml  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/xash3d/skeleton/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/jni/: Android.mk
android/src/org/xash/: MainActivity.java
cmake/: FWGSLib.cmake
common/: avikit.c  build.c  common.h  cvar.c  filesystem.c  net_buffer.c  net_buffer.h  net_chan.c  net_http.c  zone.c
engine/: Android.mk
engine/client/: cl_game.c  cl_main.c  cl_scrn.c  client.h  console.c  gl_backend.c  gl_draw.c  gl_image.c  gl_local.h  gl_rlight.c  gl_rmain.c  gl_rsurf.c  input.c  s_dsp.c  s_main.c  sound.h  vid_common.c
engine/common/: common.c  infostring.c  mod_studio.c  model.c  network.c
engine/platform /android/: android_nosdl.c  vid_android.c
engine/platform /posix/: crashhandler.c  crashhandler_libunwind.c
engine/platform /sdl/: vid_sdl.c
engine/platform /win32/: crashhandler.c
engine/server/: server.h  sv_cmds.c  sv_direct.c  sv_game.c  sv_main.c  sv_world.c
loader/: 1.py
